<resources>
    <string name="app_name">Covid19 Tracker 🇮🇳</string>
    <string name="select_state_ut">Select State/UT:</string>
    <string name="type_to_choose_state">Type to Choose State</string>
    <string name="places_with_case">Place with cases:</string>
    <string name="type_to_choose_place">Type to Choose Place</string>
    <string name="skip">Skip</string>
    <string name="save">Save</string>
    <string-array name="notification_channel_name_list">
        <item>Default</item>
        <item>Covid Report</item>
        <item>Covid Rising Nearby</item>
        <item>Buy From Home</item>
        <item>Promotional</item>
    </string-array>
    <string-array name="notification_channel_desc_list">
        <item>Default Notification</item>
        <item>Daily Covid Report</item>
        <item>Alert if covid is rising nearby</item>
        <item>Online purchases of Essentials</item>
        <item>Relevant Promotional Notification</item>
    </string-array>
    <string-array name="notification_channel_id_list">
        <item>default_id</item>
        <item>covid_report_id</item>
        <item>covid_rising_nearby_id</item>
        <item>buy_from_home_id</item>
        <item>promotional_id</item>
    </string-array>
    <string name="covid_report">There is %d new cases in %s, %d new cases in %s and %d new cases in %s. Be safe, be smart, be kind \uD83D\uDE37</string>
    <string name="covid_report_india_only">There is %d new cases in %s. Be safe, be smart, be kind \uD83D\uDE37</string>
    <string name="about_covid19india_title_text">We get our data from <u>incovid19.org</u></string>
    <string name="app_desc_text">
        This app helps you to track Covid19 in indian and it\'s different states and districts.
        This app will give you report daily about covid cases in your nearby area.&lt;br&gt;
        This app will tell you different way to prevent from covid and if unfortunately if you got covid, it will tell you different ways to cure.&lt;br&gt;&lt;br&gt;
        The suggestion and guidelines is taken from Health Ministry, Government of India&lt;br&gt;
        There is also a section to buy essential things if required from the comfort of your home.
    </string>
    <string name="share_app_description">Track Covid19 case in the india and stay updated.
        Buy essentials from home. Get Daily Report about covid cases in your area.
         Different ways to prevent and cure covid from official sources of Health Ministry, Government of India
        \n\nDownload %s\n
        %s
    </string>
    <string name="about_in_covid19">About incovid19.org</string>
    <string name="about_app">About App</string>
    <string name="indian_map">Indian Map</string>
    <string-array name="q_and_a_questions_list">
        <item>Who are the collaborators for this initiative?</item>
        <item>About the Initiative</item>
        <item>What are the objectives of this initiative?</item>
        <item>Will data availability exactly match the Covid19India efforts ?</item>
        <item>How should I report a bug / error I have found?</item>
        <item>Is this official app of incovid19.org</item>
        <item>What is the process for the daily updates to the portal?</item>
        <item>What is the frequency of updates to the portal?</item>
        <item>What is the source of covid19 data for the portal?</item>
        <item>Acknowledgements</item>
        <item>Disclaimer</item>
    </string-array>
    <string-array name="q_and_a_answers_list">
        <item>inCovid19 is a collaborative initiative involving the Indian Institute of Technology Madras(https://www.iitm.ac.in),the Centre for Networked Intelligence(https://cni.iisc.ac.in/) at the Indian Institute of Science (IISc)(https://iisc.ac.in/), the Indian Statistical Institute (ISI)(https://www.isical.ac.in/) and Semantic Web India(http://www.semanticwebindia.com/index.html#extHeader5-6i), a private technology firm based in Bangalore.</item>
        <item>www.covid19india.org offered a comprehensive view of the COVID-19 pandemic across India by providing data on confirmed, active and recovered cases, tests and fatalities. The organisers recently announced that they would stop updating their website and APIs after 31st October 2021. This new initiative - inCovid19 - will continue the efforts of Covid19India volunteers beyond 31st October 2021 and will make the data available at www.incovid19.org using similar data APIs.</item>
        <item>The main objective of inCovid19 is to maintain the data availability post October 31 2021, using similar API endpoints as data.covid19india.org. This will ensure that downstream applications designed using these APIs can continue to function with minimal disruption using the data APIs at data.incovid19.org. This initiative also plans to harness the available historical data to present valuable insights and added functionality for enhanced search and analysis.</item>
        <item>While statewise numbers are made available centrally and regularly updated by MOHFW, district-wise numbers are published by different states in different venues and formats, with differing levels of granularity. Collecting and collating data from these diverse sources is the primary challenge we face. The granularity of the data provided by www.covid19india.org extended to the district level for most States. The Covid19India team accomplished this through a team of volunteers who diligently collated, validated and published the data using a combination of processes. The inCovid19 initiative uses a largely automated process that relies on the published numbers on state government portals and official sources. Though the workflow is not a replica of the process used by the Covid19India team, we hope to continuously update the data to reflect as accurate and granular data as possible, using data published on state government and other official portals.</item>
        <item>We do expect teething challenges in the initial phase when we get this running. If you spot any bugs or data errors, please send an email to contact@incovid19.org. Specifically for data transcription errors, the most likely reason is that a source file has not been transcribed properly into text. In such cases, it would be very helpful if you can identify the specific source</item>
        <item>No, this app is only using it\'s api (data.incovid19.org)</item>
        <item>We took over the project of continuing Covid19India.org in the last week of October 2021. We have stabilized on the following strategy for updating the portal after trying out multiple options. Our data sources for covid19 data at the national level is https://www.mygov.in/covid-19 and the respective state government portals for the state and district level covid19 data. Currently about 19 states regularly provide district level covid 19 data. The rest of the 17 states either do not provide district level updates or updates are received on their portals in a delayed schedule ranging from a few days to a week. We are putting in our best efforts to keep the portal current matching the schedules of the state level updates as and when we receive them (even if it is delayed). The portal reflects covid19 updates as of previous day – exactly similar to what is received nationally at https://www.mygov.in/covid-19 and the respective state government portals. There are many instances where the covid19 data at the national level at https://www.mygov.in/covid-19 reflects a different number for the state than what is received from the state government portal as district level updates. We have synchronized our portal updates daily post receiving the national level covid 19 updates on https://www.mygov.in/covid-19. Hence, our portal updates will be reflected largely by 12:00 noon daily unless there has been a technical glitch in consolidating individual updates from the state government portals.</item>
        <item>We receive updates at the source – national level (https://www.mygov.in/covid-19) and the respective state government portals once daily for most of the states. Some states update their portal once in a few days. We update the portal once a day post receiving the national level update at https://www.mygov.in/covid-19. On some days, you will see discrepancy in district level updates for certain states vis-à-vis updates at the state level. This is because the respective district level updates have not been received from the state government portals.</item>
        <item>Our list of sources for covid19 data at national, state and district level data can be found here(https://data.incovid19.org/). Please do reach out to us, if you can augment our current sources for a betterrepresentation of covid19 data at the state/district level.</item>
        <item>We would like to acknowledge the contribution of the covid19india.org team of volunteers for their tireless efforts in creating and maintaining the site from the start of the pandemic and also in making their codebase open source and available for use by all. This website www.incovid19.org is largely built on top of the open-source codebase of covid19india.org</item>
        <item>THE CONTENTS OF THIS PORTAL, INCLUDING DATA, MAPS, AND PLOTS, ARE PROVIDED "AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. THE AUTHORS OF THE PORTAL ASSUME NO RESPONSIBILITY OR LIABILITY FOR ANY ERRORS OR OMISSIONS IN THE CONTENT OF THIS SITE/PORTAL. IN NO EVENT SHALL THE AUTHORS OF THE PORTAL BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE PORTAL OR THE USE OR OTHER DEALINGS WITH THE PORTAL. THIS PORTAL INCORPORATES DATA OR OTHER CONTENT BELONGING TO OR ORIGINATING FROM THIRD PARTIES. WE DO NOT WARRANT, ENDORSE, GUARANTEE, OR ASSUME RESPONSIBILITY FOR THE ACCURACY OR RELIABILITY OF ANY THIRD-PARTY INFORMATION.</item>
    </string-array>
    <string name="admob_tracking_screen_banner_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_tracking_screen_banner_ad_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="your_place">(Your Place)</string>
    <string name="no_record_found">No Record Found!</string>
    <string name="state">State</string>
    <string name="your_state">(Your State)</string>
    <string name="app_version">App Version %s</string>
    <string name="please_select_state">Please Select State</string>
    <string name="please_select_place">Please Select Place</string>
    <string name="no_email_app_found">No email app found.</string>
    <string name="india">India</string>
    <string name="total">Total</string>
    <string name="total_confirmed_cases">Total Confirmed Cases</string>
    <string name="total_death_cases">Total Death Cases</string>
    <string name="total_recovered_cases">Total Recovered Cases</string>
    <string name="daily_confirmed_cases">Daily Confirmed Cases</string>
    <string name="daily_death_cases">Daily Death Cases</string>
    <string name="daily_recovered_cases">Daily Recovered Cases</string>
    <string name="most_affected_district">Most affected Places</string>
    <string name="most_affected_states">Most affected States</string>
    <string name="logo_content_description">logo</string>
    <string name="welcome_msg">Welcome to Covid19 Tracker 🇮🇳</string>
    <string name="select_language_title">Please select your preferred language</string>
    <string name="locale_en">English</string>
    <string name="locale_hi">हिन्दी</string>
    <string name="locale_ml">മലയാളം</string>
    <string name="locale_mr">मराठी</string>
    <string name="continue_btn_text">Continue</string>
    <string name="made_in_india">Made in 🇮🇳</string>
</resources>