<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.language.LanguageActivity">

    <ImageView
        android:id="@+id/logo_iv"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_small"
        android:contentDescription="@string/logo_content_description"
        android:src="@drawable/app_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_msg_tv"
        style="@style/HeadingTextMediumSizeSemiBoldFont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/welcome_msg"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_iv" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/save_language_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_msg_tv">

        <TextView
            android:id="@+id/language_title_tv"
            style="@style/NonHeadingTextMediumSizeRegularFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:gravity="center"
            android:text="@string/select_language_title"
            app:layout_constraintBottom_toTopOf="@id/language_rg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_msg_tv" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_border_bg"
            app:layout_constraintBottom_toTopOf="@id/save_language_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/language_rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_medium"
                app:layout_constraintBottom_toTopOf="@id/save_language_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <RadioButton
                    android:id="@+id/locale_en"
                    style="@style/LanguageRadioButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:padding="@dimen/margin_medium"
                    android:text="@string/locale_en"
                    android:textColor="@color/language_color_selector"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioButton
                    android:id="@+id/locale_hi"
                    style="@style/LanguageRadioButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_medium"
                    android:text="@string/locale_hi"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="@id/locale_en"
                    app:layout_constraintTop_toBottomOf="@id/locale_en" />

                <RadioButton
                    android:id="@+id/locale_ml"
                    style="@style/LanguageRadioButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_medium"
                    android:text="@string/locale_ml"
                    android:textColor="@color/language_color_selector"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="@id/locale_en"
                    app:layout_constraintTop_toBottomOf="@id/locale_hi" />

                <RadioButton
                    android:id="@+id/locale_mr"
                    style="@style/LanguageRadioButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_medium"
                    android:text="@string/locale_mr"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="@id/locale_en"
                    app:layout_constraintTop_toBottomOf="@id/locale_ml" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </LinearLayout>

    <Button
        android:id="@+id/skip_language_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium"
        android:background="@null"
        android:text="@string/skip"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/madeInIndia"
        app:layout_constraintEnd_toStartOf="@id/save_language_btn"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/save_language_btn"
        style="@style/BlueRoundedCornerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium"
        android:text="@string/continue_btn_text"
        app:layout_constraintBottom_toTopOf="@id/madeInIndia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/skip_language_btn" />

    <TextView
        android:id="@+id/madeInIndia"
        style="@style/NonHeadingTextSmallSizeRegularFont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:padding="@dimen/margin_smallest"
        android:text="@string/made_in_india"
        android:textColor="@color/blackShade7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>